examples/test/testpolicy10519.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10519
  namespace: namespace340
spec:
  podSelector:
    matchLabels:
      key27: value18
      key3: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value24
          key25: value34
      podSelector:
        matchLabels:
          key15: value26
          key4: value42
          key28: value48
